@@ -37,7 +37,7 @@ app->defaults(
     "https://catoverflow.com/",
     "https://open.spotify.com/artist/4HV7yKF3SRpY6I0gxu7hm9",
     "https://gist.github.com/jhthorsen/3738de6f44f180a29bbb",
-    "https://appear.in/link-embedder-demo",
+    "https://whereby.com/link-embedder-demo",
     "https://github.com/jhthorsen/linkembedder/blob/master/t/basic.t",
     "https://metacpan.org/pod/Mojolicious",
     "https://pastebin.com/V5gZTzhy",
